cassandra-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cassandra
  labels:
    name: cassandra
spec:
  clusterIP: None
  ports:
  - port: 9042
  selector:
    app: cassandra
