backend-ingress-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-backend
  namespace: cmdicncf
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: www.abc.com
    http:
      paths:
      - path:
        backend:
          serviceName: cmdicncf-http-backend
          servicePort: 80
