backend-ingress-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-backend-https
  namespace: cmdicncf
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: www.abc.com
    http:
      paths:
      - path:
        backend:
          serviceName: cmdicncf-http-backend
          servicePort: 80
  tls:
    - hosts:
      - www.abc.com
      secretName: tls-secret
